--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -12,7 +12,7 @@ log4j.appender.RollingFile.File=../logs/jeeplus/jeeplus.log
 log4j.appender.RollingFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.RollingFile.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n
 
-#log4j.logger.java.sql=DEBUG
+log4j.logger.java.sql=DEBUG
 
 #Springframework level
 #log4j.logger.org.springframework=ERROR
