--- a/src/main/resources/bug.properties
+++ b/src/main/resources/bug.properties
@@ -13,7 +13,7 @@
 jdbc.type=mysql
 jdbc.driver=com.mysql.jdbc.Driver
 #jdbc.url=jdbc:mysql://192.168.191.3:3306/jeeplus_schema?useUnicode=true&characterEncoding=utf-8
-jdbc.url=jdbc:mysql://localhost:3306/jeeplus_schema?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://localhost:3306/bug_sys?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
 jdbc.password=shaonian
 
